--- a/templates/parts/jsTranslations.html.twig
+++ b/templates/parts/jsTranslations.html.twig
@@ -1,5 +1,42 @@
-<script>
-    const newTransferModalTitle = '{% trans %}New transfer{% endtrans %}';
-    const toggleYes = '{% trans %}Yes{% endtrans %}';
-    const toggleNo = '{% trans %}No{% endtrans %}';
+<script type="text/javascript">
+    const translation = {
+        newTransferModalTitle: '{% trans %}New transfer{% endtrans %}',
+        toggleYes: '{% trans %}Yes{% endtrans %}',
+        toggleNo: '{% trans %}No{% endtrans %}',
+        dashboardPreviousMonth: '{% trans %}Previous month{% endtrans %}',
+        dashboardCurrentMonth: '{% trans %}Current month{% endtrans %}',
+        gridButtonBack: '{% trans %}back{% endtrans %}',
+        gridButtonNext: '{% trans %}next{% endtrans %}',
+        gridFilterRecipient: '{% trans %}Recipient{% endtrans %}',
+        gridFilterDescription: '{% trans %}Description{% endtrans %}',
+        gridFilterBtn: '{% trans %}Filter{% endtrans %}',
+        gridFilterBtnClear: '{% trans %}Clear filter{% endtrans %}',
+        gridColValuta: '{% trans %}Valuta date{% endtrans %}',
+        gridColRecipient: '{% trans %}Recipient{% endtrans %}',
+        gridColCategory: '{% trans %}Category{% endtrans %}',
+        gridColAmount: '{% trans %}Amount{% endtrans %}',
+        transferGridColDate: '{% trans %}Date{% endtrans %}',
+        transferGridColAmount: '{% trans %}Amount{% endtrans %}',
+        transferGridColName: '{% trans %}Name{% endtrans %}',
+        transferGridColInfo: '{% trans %}Info{% endtrans %}',
+        transferGridColBank: '{% trans %}Bank{% endtrans %}',
+        transferGridColIban: '{% trans %}IBAN{% endtrans %}',
+        subAccountBtnBack: '{% trans %}back{% endtrans %}',
+        subAccountBtnNext: '{% trans %}next{% endtrans %}',
+        subAccountGridColValuta: '{% trans %}Valuta date{% endtrans %}',
+        subAccountGridColBooking: '{% trans %}Booking{% endtrans %}',
+        subAccountGridColDescription: '{% trans %}Description{% endtrans %}',
+        subAccountGridColAmount: '{% trans %}Amount{% endtrans %}',
+        treeGridColCategory: '{% trans %}Category{% endtrans %}',
+        treeGridBtnBack: '{% trans %}back{% endtrans %}',
+        treeGridBtnNext: '{% trans %}next{% endtrans %}',
+        settingsColGroup: '{% trans %}Group{% endtrans %}',
+        settingsColName: '{% trans %}Name{% endtrans %}',
+        settingsColTreeIgnore: '{% trans %}Tree Ignore{% endtrans %}',
+        settingsColDashboardIgnore: '{% trans %}Dashboard Ignore{% endtrans %}',
+        settingsColRule: '{% trans %}Rule{% endtrans %}',
+        settingsColType: '{% trans %}Type{% endtrans %}',
+        settingsColTransactionField: '{% trans %}Transaction field{% endtrans %}',
+        settingsColCategory: '{% trans %}Category{% endtrans %}',
+    };
 </script>
