added paypal import module and grid view

--- a/templates/parts/jsTranslations.html.twig
+++ b/templates/parts/jsTranslations.html.twig
@@ -1,5 +1,7 @@
 <script type="text/javascript">
     const translation = {
+        genericErrorTitle: '{% trans %}An error has occurred!{% endtrans %}',
+        genericErrorMessage: '{% trans %}Unfortunately, something went wrong!{% endtrans %}',
         newTransferModalTitle: '{% trans %}New transfer{% endtrans %}',
         toggleYes: '{% trans %}Yes{% endtrans %}',
         toggleNo: '{% trans %}No{% endtrans %}',
@@ -38,5 +40,20 @@
         settingsColType: '{% trans %}Type{% endtrans %}',
         settingsColTransactionField: '{% trans %}Transaction field{% endtrans %}',
         settingsColCategory: '{% trans %}Category{% endtrans %}',
+        paypalImportSuccess: '{% trans %}Import successfull!{% endtrans %}',
+        paypalBtnBack: '{% trans %}back{% endtrans %}',
+        paypalBtnNext: '{% trans %}next{% endtrans %}',
+        paypalColDate: '{% trans %}Valuta date{% endtrans %}',
+        paypalColName: '{% trans %}Name{% endtrans %}',
+        paypalColType: '{% trans %}Type{% endtrans %}',
+        paypalColRecipient: '{% trans %}Recipient{% endtrans %}',
+        paypalColTransCode: '{% trans %}Transaction code{% endtrans %}',
+        paypalColArtDesc: '{% trans %}Article description{% endtrans %}',
+        paypalColArtNumb: '{% trans %}Article number{% endtrans %}',
+        paypalColAssocTrans: '{% trans %}Associated transaction code{% endtrans %}',
+        paypalColInvoice: '{% trans %}Invoice number{% endtrans %}',
+        paypalColAmount: '{% trans %}Amount{% endtrans %}',
+
+
     };
 </script>
