--- a/templates/parts/xmlHttpRoutes.html.twig
+++ b/templates/parts/xmlHttpRoutes.html.twig
@@ -31,4 +31,7 @@
     const settings_assignment_delete = "{{ path('settings_assignment_delete') }}";
     // chart
     const chart_data = "{{ path('chart_data') }}";
+    // payal
+    const paypal_data = "{{ path('paypal_data') }}";
+    const paypal_import = "{{ path('paypal_import') }}";
 </script>
