--- a/templates/parts/navigation.html.twig
+++ b/templates/parts/navigation.html.twig
@@ -34,7 +34,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="{{ path('paypal_index') }}" class="nav-link {% if app.request.get('_route') == 'paypal_index' %}active{% endif %}">
-                        <i class="fas fa-paypal"></i> <p>{% trans from 'navigation' %}PayPal{% endtrans %}</p>
+                        <i class="fab fa-paypal"></i> <p>{% trans from 'navigation' %}PayPal{% endtrans %}</p>
                     </a>
                 </li>
                 <li class="nav-item">
