added feature to assign imported paypal transactions

--- a/templates/parts/jsTranslations.html.twig
+++ b/templates/parts/jsTranslations.html.twig
@@ -17,6 +17,8 @@
         gridColRecipient: '{% trans %}Recipient{% endtrans %}',
         gridColCategory: '{% trans %}Category{% endtrans %}',
         gridColAmount: '{% trans %}Amount{% endtrans %}',
+        gridPickerBtnCancel: '{% trans %}Cancel{% endtrans %}',
+        gridPickerBtnOk: '{% trans %}OK{% endtrans %}',
         transferGridColDate: '{% trans %}Date{% endtrans %}',
         transferGridColAmount: '{% trans %}Amount{% endtrans %}',
         transferGridColName: '{% trans %}Name{% endtrans %}',
