--- a/templates/parts/xmlHttpRoutes.html.twig
+++ b/templates/parts/xmlHttpRoutes.html.twig
@@ -34,4 +34,6 @@
     // payal
     const paypal_data = "{{ path('paypal_data') }}";
     const paypal_import = "{{ path('paypal_import') }}";
+    const paypal_get_transaction_data = "{{ path('paypal_get_transaction_data') }}";
+    const paypal_assign_transaction = "{{ path('paypal_assign_transaction') }}";
 </script>
