prepared for showing a pi chart containing the grouped spendings of the last month at the dashboard

--- a/templates/parts/xmlHttpRoutes.html.twig
+++ b/templates/parts/xmlHttpRoutes.html.twig
@@ -4,6 +4,7 @@
     // dashboard
     const dashboard_get_monthly_remaining = "{{ path('dashboard_get_monthly_remaining') }}";
     const dashboard_get_account_progress = "{{ path('dashboard_get_account_progress') }}";
+    const dashboard_get_last_month_overview = "{{ path('dashboard_get_last_month_overview') }}";
     // grid
     const get_category_data = "{{ path('get_category_data') }}";
     const get_grid_data = "{{ path('get_grid_data') }}";
