--- a/templates/parts/xmlHttpRoutes.html.twig
+++ b/templates/parts/xmlHttpRoutes.html.twig
@@ -18,6 +18,7 @@
     const get_columns_full_year = "{{ path('get_columns_full_year') }}";
     const get_tree_data_last_half_year = "{{ path('get_tree_data_last_half_year') }}";
     const get_columns_last_half_year = "{{ path('get_columns_last_half_year') }}";
+    const tree_get_detail_transactions = "{{ path('tree_get_detail_transactions') }}";
     // transfer
     const transfer_index = "{{ path('transfer_index') }}";
     const transfer_tan = "{{ path('transfer_tan') }}";
