use highcharts for private usage

--- a/templates/default/dashboard.html.twig
+++ b/templates/default/dashboard.html.twig
@@ -68,7 +68,7 @@
                             <h3 class="card-title">{% trans %}What is left at the end of the month{% endtrans %}</h3>
                         </div>
                         <!-- /.card-header -->
-                        <div class="card-body"><canvas class="series-wrapper" id="series_monthly_remaining" height="200"></canvas></div>
+                        <div class="card-body"><div class="series-wrapper" id="series_monthly_remaining"></div></div>
                         <!-- /.card-body -->
                         <div class="overlay" id="series_monthly_remaining_loader"><i class="spinner-border"></i></div>
                     </div>
@@ -80,7 +80,7 @@
                             <h3 class="card-title">{% trans %}Mainaccount{% endtrans %}</h3>
                         </div>
                         <!-- /.card-header -->
-                        <div class="card-body"><canvas class="series-wrapper" id="series_account_progress" height="200"></canvas></div>
+                        <div class="card-body"><div class="series-wrapper" id="series_account_progress"></div></div>
                         <!-- /.card-body -->
                         <div class="overlay" id="series_account_progress_loader"><i class="spinner-border"></i></div>
                     </div>
