added pie highcharts

--- a/templates/default/dashboard.html.twig
+++ b/templates/default/dashboard.html.twig
@@ -86,6 +86,31 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card card-outline">
+                        <div class="card-header">
+                            <h3 class="card-title">Ausgaben letzter Monat</h3>
+                        </div>
+                        <!-- /.card-header -->
+                        <div class="card-body"><div class="series-wrapper" id="series_last_month_overview"></div></div>
+                        <!-- /.card-body -->
+                        <div class="overlay" id="series_last_month_overview_loader"><i class="spinner-border"></i></div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card card-outline">
+                        <div class="card-header">
+                            <h3 class="card-title">Ausgaben dieser Monat</h3>
+                        </div>
+                        <!-- /.card-header -->
+                        <div class="card-body"><div class="series-wrapper" id="series_current_month_overview"></div></div>
+                        <!-- /.card-body -->
+                        <div class="overlay" id="series_current_month_overview_loader"><i class="spinner-border"></i></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
