--- a/templates/parts/xmlHttpRoutes.html.twig
+++ b/templates/parts/xmlHttpRoutes.html.twig
@@ -24,6 +24,9 @@
     const transfer_tan = "{{ path('transfer_tan') }}";
     const transfer_autocomplete = "{{ path('transfer_autocomplete') }}";
     const transfer_data = "{{ path('transfer_data') }}";
+    // settings category group
+    const settings_category_group_data = "{{ path('settings_category_group_data') }}";
+    const settings_category_group_edit = "{{ path('settings_category_group_edit') }}";
     // settings category
     const settings_category_data = "{{ path('settings_category_data') }}";
     const settings_category_edit = "{{ path('settings_category_edit') }}";
