added the possibility to define a color for each category group

--- a/templates/parts/jsTranslations.html.twig
+++ b/templates/parts/jsTranslations.html.twig
@@ -42,6 +42,8 @@
         settingsColType: '{% trans %}Type{% endtrans %}',
         settingsColTransactionField: '{% trans %}Transaction field{% endtrans %}',
         settingsColCategory: '{% trans %}Category{% endtrans %}',
+        settingsColColor: '{% trans %}Color{% endtrans %}',
+        settingsColCategories: '{% trans %}Categories{% endtrans %}',
         paypalImportSuccess: '{% trans %}Import successfull!{% endtrans %}',
         paypalBtnBack: '{% trans %}back{% endtrans %}',
         paypalBtnNext: '{% trans %}next{% endtrans %}',
@@ -55,7 +57,5 @@
         paypalColAssocTrans: '{% trans %}Associated transaction code{% endtrans %}',
         paypalColInvoice: '{% trans %}Invoice number{% endtrans %}',
         paypalColAmount: '{% trans %}Amount{% endtrans %}',
-
-
     };
 </script>
