--- a/templates/settings_category_group/new.html.twig
+++ b/templates/settings_category_group/new.html.twig
@@ -2,6 +2,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
+    {{ encore_entry_link_tags('settingsCategoryGroupAdd') }}
 {% endblock %}
 
 {% block body %}
@@ -24,6 +25,7 @@
                     <div class="card-body bootstrap-toggle-form">
                         {{ form_errors(form) }}
                         {{ form_row(form.name) }}
+                        {{ form_row(form.color) }}
                     </div>
                     <!-- /.box-body -->
                     <div class="card-footer">
@@ -40,4 +42,5 @@
 
 {% block javascripts %}
     {{ parent() }}
+    {{ encore_entry_script_tags('settingsCategoryGroupAdd') }}
 {% endblock %}
