--- a/templates/chart/index.html.twig
+++ b/templates/chart/index.html.twig
@@ -27,7 +27,7 @@
 
                         <div class="row">
                             <div class="col-12">
-                                <canvas id="chart" height="500"></canvas>
+                                <div id="chart" height="500"></div>
                             </div>
                         </div>
                     </div>
