minor improvement: refresh the current balance after updating the bookings and added the possibility to execute a listener for a specific view after updating the bookings

--- a/templates/parts/header.html.twig
+++ b/templates/parts/header.html.twig
@@ -11,7 +11,7 @@
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <a class="nav-link" href="#" role="button">
-                <span><b>{{ current_balance() }}</b></span>
+                <span><b id="current_balance">{{ current_balance() }}</b></span>
             </a>
         </li>
         <li class="nav-item">
