--- a/templates/parts/xmlHttpRoutes.html.twig
+++ b/templates/parts/xmlHttpRoutes.html.twig
@@ -1,6 +1,7 @@
 <script>
     // global
     const update_transactions = "{{ path('update') }}";
+    const get_current_balance = "{{ path('get_current_balance') }}";
     // dashboard
     const dashboard_get_monthly_remaining = "{{ path('dashboard_get_monthly_remaining') }}";
     const dashboard_get_account_progress = "{{ path('dashboard_get_account_progress') }}";
