--- a/templates/parts/modal.html.twig
+++ b/templates/parts/modal.html.twig
@@ -10,7 +10,23 @@
             </div>
             <div class="modal-body" id="modal_default_body"></div>
 
-            <div class="loader hidden" id="modal_loading"><div class="spinner-border"></div></div>
+            <div class="loader hidden" id="modal_default_loading"><div class="spinner-border"></div></div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Transaction Modal -->
+<div class="modal fade" id="modal_transaction" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content bg-success">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal_transaction_title">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modal_transaction_body"></div>
         </div>
     </div>
 </div>
